# my_python_project

./: .gitignore  .markdownlintignore  .pre-commit-config.yaml  README.md  azure-pipelines.yaml  azure-pipelines.yaml_old  pyproject.toml  scratch.py
.github/workflows/: ci_pipeline.yaml  ci_pipeline.yaml_old
archive/: questions.txt  scratch.py
docs/: doc1.md
e2e_samples/fabric_sample/: README.md
e2e_samples/fabric_sample/src/data/: employee.csv
e2e_samples/fabric_sample/src/datapipeline_code/: transform.py
e2e_samples/fabric_sample/src/notebooks/: notebook_1.ipynb
e2e_samples/fabric_sample/tests/datapipeline_code/: test_transform.py
old_and_archived_samples/sample_old/src/: transform.py
old_and_archived_samples/sample_old/tests/: test_transform.py
