[project]
name = "my_python_project"
version = "0.1.0"
description = "A Python project with formatting and linting tools"
authors = [{ name = "Your Name", email = "your.email@example.com" }]

dependencies = ["pandas", "numpy"]

# [project.optional-dependencies]
# release = ["build", "twine"]
# test = ["pytest", "pytest-cov"]
# ci = [
#     "my_python_project",
#     "black",
#     "isort",
#     "ruff",
#     "yamllint",
#     "nbqa",
#     "pre-commit",
#     "my_python_project[test]"
# ]
# dev = ["my_python_project[ci, test, release]" , "ipykernel"]
# cd = ["my_python_project[ci]"]

[project.optional-dependencies]
code_qa = ["black", "isort", "ruff", "yamllint", "nbqa", "pre-commit"]
test = ["pytest", "pytest-cov"]
release = ["build", "twine"]

dev = ["my_python_project[code_qa, test, release]" , "ipykernel"]
ci = ["my_python_project[test]", "pre-commit"]
cd = ["my_python_project[release]"]


[tool.isort]
profile = "black"
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
/(
    \.git
    | \.venv
    | \.ipynb$
    | old_and_archived_samples
)/
'''

[tool.ruff]
lint.select = ["E", "F", "B"]
# lint.ignore = ["E501"]
lint.fixable = ["E", "F", "B"]
line-length = 120
target-version = "py311"
exclude = ["*.ipynb", "old_and_archived_samples/*"]


[tool.nbqa]
line-length = 120

# not supported yet
# [tool.yamllint]
# config-file = "yamllint.yaml"

# not supported yet
# [tool.markdownlint]
# config = "markdownlint.yml"

[tool.pytest.ini_options]
addopts = "-ra"
norecursedirs = ["old_and_archived_samples"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["e2e_samples", "single_tech_samples"]
